--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <textarea id="txt-input" placeholder="write somthing"></textarea>
     <button id="btn-translate">translate</button>
 
-    <div class="outputHeading">output will come here</div>
+    <h2 class="outputHeading">output will come here</h2>
     <div id="output"></div>
-
-    <script src="app.js" type="text/javascript"></script>
 </body>
+<script src="app.js" type="text/javascript"></script>
 </html>
